cluster/core/rook-ceph/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rook-ceph-mgr-dashboard
  namespace: rook-ceph
  annotations:
  labels:
    app.kubernetes.io/instance: rook-ceph-mgr-dashboard
    app.kubernetes.io/name: rook-ceph-mgr-dashboard
spec:
  rules:
  - host: "rook.k8s.yungen.studio"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rook-ceph-mgr-dashboard
            port:
              name: http-dashboard
